// Copyright 2019-2020 Joonas Javanainen <joonas.javanainen@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import groovy.json.JsonOutput
import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
import java.nio.file.Files
import java.security.MessageDigest
import java.time.Instant
import java.time.ZoneOffset
import java.util.Properties

plugins {
    java
    kotlin("jvm") version "2.2.10"
    id("org.jlleitschuh.gradle.ktlint") version "13.1.0"
}

repositories {
    mavenCentral()
}

val ghidraDir =
    (project.findProperty("ghidra.dir") as? String)
        ?: System.getenv("GHIDRA_INSTALL_DIR")
        ?: throw IllegalStateException("Can't find Ghidra installation")

val ghidraProps = Properties().apply { file("$ghidraDir/Ghidra/application.properties").inputStream().use { load(it) } }
val ghidraVersion = ghidraProps.getProperty("application.version")!!
val ghidraRelease = ghidraProps.getProperty("application.release.name")!!

require(ghidraVersion == "12.1.3") { "This build targets Ghidra 12.1.3; found $ghidraVersion" }
require(JavaVersion.current() == JavaVersion.VERSION_21) { "Run Gradle with JDK 21 (JAVA_HOME)" }
version = "20260905-integration1"
val buildEpoch = providers.environmentVariable("SOURCE_DATE_EPOCH").orElse("1788566400")
val buildDate = Instant.ofEpochSecond(buildEpoch.get().toLong()).atZone(ZoneOffset.UTC).toLocalDate()

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withSourcesJar()
}

tasks.withType<KotlinCompile> {
    compilerOptions {
        jvmTarget.set(JvmTarget.JVM_21)
        optIn.add("kotlin.ExperimentalUnsignedTypes")
    }
}

val ghidraJars =
    fileTree("$ghidraDir/Ghidra/Framework") { include("**/*.jar") } +
        fileTree("$ghidraDir/Ghidra/Features") { include("**/*.jar") }

val sleigh: Configuration by configurations.creating

dependencies {
    compileOnly(ghidraJars)
    sleigh(ghidraJars)

    testImplementation(ghidraJars)
    testImplementation(kotlin("stdlib-jdk8"))
    testImplementation(platform("org.junit:junit-bom:5.13.4"))
    testImplementation("org.junit.jupiter:junit-jupiter-api")
    testImplementation("org.junit.jupiter:junit-jupiter-params")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

val generateExtensionProps by tasks.registering {
    val output = layout.buildDirectory.file("generated/extension.properties")
    outputs.file(output)
    inputs.property("buildEpoch", buildEpoch)
    inputs.property("ghidraVersion", ghidraVersion)
    inputs.property("extensionVersion", project.version.toString())
    doLast {
        file(output).outputStream().use {
            val props = Properties()
            props +=
                mapOf(
                    ("name" to "GhidraBoy"),
                    ("description" to "Support for Sharp SM83 / Game Boy"),
                    ("author" to "Gekkio"),
                    ("createdOn" to buildDate.toString()),
                    ("version" to ghidraVersion),
                    ("extensionVersion" to project.version.toString()),
                    ("buildEpoch" to buildEpoch.get()),
                )
            it.write(
                props
                    .stringPropertyNames()
                    .sorted()
                    .joinToString(
                        "\n",
                        postfix = "\n",
                    ) { key -> "$key=${props.getProperty(key)}" }
                    .toByteArray(Charsets.UTF_8),
            )
        }
    }
}

val compileSleigh by tasks.registering(JavaExec::class) {
    val slaspecFile = file("data/languages/sm83.slaspec")
    val slaFile = file("data/languages/sm83.sla")

    inputs
        .files(fileTree("data/languages").include("*.slaspec", "*.sinc"))
        .withPropertyName("sourceFiles")
        .withPathSensitivity(PathSensitivity.RELATIVE)
    outputs
        .files(slaFile)
        .withPropertyName("outputFile")

    classpath = sleigh
    mainClass.set("ghidra.pcodeCPort.slgh_compile.SleighCompile")
    args = listOf("-u", "-l", "-n", "-t", "-e", "-c", "-f", slaspecFile.absolutePath)
}

val zip by tasks.registering(Zip::class) {
    archiveFileName.set("ghidra_${ghidraVersion}_${ghidraRelease}_${project.version}_${project.name}.zip")

    into("${project.name}/")
    from(tasks.named("jar")) {
        into("lib/")
    }
    from(tasks.named("sourcesJar")) {
        into("lib/")
        rename { "${project.name}-src.zip" }
    }
    from(configurations.runtimeClasspath.get()) {
        into("lib/")
    }

    from(generateExtensionProps)
    from("data") {
        into("data/")
        include("**/*.cspec", "**/*.ldefs", "**/*.pspec", "**/*.sinc", "**/*.slaspec", "**/sleighArgs.txt")
    }
    dependsOn(compileSleigh)
    from("data/languages/sm83.sla") { into("data/languages/") }
    from("data/manuals") { into("data/manuals/") }
    val documentation = file("packaging/static-docs.txt")
    val documentationPaths = documentation.readLines().filter { it.isNotBlank() && !it.startsWith("#") }
    inputs.file(documentation)
    doFirst {
        documentationPaths.forEach { path ->
            require(!File(path).isAbsolute && path.split('/').none { it == ".." } && path.none { it in "*?[]{}" }) {
                "Invalid packaged documentation path: $path"
            }
            require(file("docs/$path").isFile) { "Missing packaged documentation: $path" }
            val document = file("docs/$path").toPath()
            require(!Files.isSymbolicLink(document) && document.toRealPath().startsWith(file("docs").toPath().toRealPath())) {
                "Packaged documentation must be a regular file inside docs/: $path"
            }
        }
    }
    from("docs") {
        into("docs/")
        include(documentationPaths)
    }
    from("LICENSES") { into("LICENSES/") }
    from("ghidra_scripts") { into("ghidra_scripts/") }
    from("packaging/README.markdown")
    from("tools/native_dependency_update.py") { into("tools/") }
    from("LICENSE", "Module.manifest")
}

tasks.named("assemble") {
    dependsOn("zip")
}

tasks.register("buildExtension") {
    group = "distribution"
    description = "Build the static GhidraBoy extension archive."
    dependsOn(zip)
}

tasks.named<Test>("test") {
    dependsOn("compileSleigh")
    useJUnitPlatform()
    inputs
        .files(
            fileTree("data/languages") {
                include("*.cspec", "*.pspec", "*.ldefs", "*.sinc", "*.slaspec")
            },
        ).withPropertyName("languageSpecifications")

    System.getProperty("ghidraboy.vector.dir")?.let { systemProperty("ghidraboy.vector.dir", it) }
    systemProperty("ghidra.dir", ghidraDir)
    systemProperty("SystemUtilities.isTesting", true)

    // Ghidra headless init loads the full framework; default 512m fork heap is too small on Windows.
    maxHeapSize = "4g"

    // Required for Ghidra 12 + JDK 21.0.10+ in forked Gradle test workers (see Ghidra javaTestProject.gradle).
    jvmArgs("-Djdk.serialFilterFactory=ghidra.framework.remote.GhidraSerialFilterFactory")
}

defaultTasks("clean", "assemble")

ktlint {
    version.set("1.7.1")
}

tasks.withType<AbstractArchiveTask>().configureEach {
    isPreserveFileTimestamps = false
    isReproducibleFileOrder = true
}

tasks.named<Delete>("clean") {
    delete("data/languages/sm83.sla")
}

val debuggerProject = findProject(":GhiGBC")
if (debuggerProject != null) {
    tasks.named("assemble") { dependsOn(":GhiGBC:buildExtension") }
}

// Resolve product files from actual task outputs, not dated names or neighboring checkouts.
tasks.register("integrationArtifacts") {
    group = "distribution"
    description = "Build selected extensions and write their paths and SHA256 identities."
    dependsOn(zip)
    if (debuggerProject != null) dependsOn(":GhiGBC:buildExtension")
    val manifest = layout.buildDirectory.file("integration/artifacts.json")
    outputs.file(manifest)
    outputs.upToDateWhen { false }
    doLast {
        fun artifact(file: File): Map<String, String> =
            mapOf(
                "path" to file.relativeTo(rootDir).invariantSeparatorsPath,
                "sha256" to
                    MessageDigest
                        .getInstance("SHA-256")
                        .digest(file.readBytes())
                        .joinToString("") { "%02x".format(it.toInt() and 0xff) },
            )

        fun component(
            owner: Project,
            archiveTask: String,
        ): Map<String, Map<String, String>> {
            val jarFile =
                owner.tasks
                    .named<Jar>("jar")
                    .get()
                    .archiveFile
                    .get()
                    .asFile
            val archiveFile =
                owner.tasks
                    .named<Zip>(archiveTask)
                    .get()
                    .archiveFile
                    .get()
                    .asFile
            return mapOf("jar" to artifact(jarFile), "archive" to artifact(archiveFile))
        }
        val components = linkedMapOf("GhidraBoy" to component(project, "zip"))
        if (debuggerProject != null) {
            components["GhiGBC"] = component(debuggerProject, "buildExtension")
        }
        val output = manifest.get().asFile
        output.parentFile.mkdirs()
        output.writeText(
            JsonOutput.prettyPrint(
                JsonOutput.toJson(
                    mapOf(
                        "schema" to 1,
                        "ghidra" to ghidraVersion,
                        "release" to project.version.toString(),
                        "components" to components,
                    ),
                ),
            ) + "\n",
        )
    }
}
